MDEV-11489 Assertion `0' failed in json_find_path.

When the json was just a scalar value, json_extract tried
        to parse after the value ended.